--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,10 +10,93 @@
 
     <style name="AppTheme.NoActionBar"></style>
 
-    <style name = "PlainStyle" parent="TextAppearance.AppCompat">
+    <style name = "HintStyle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/signInHint</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:background">@drawable/vector</item>
+    </style>
 
-        <item name="android:textColor">#00FF00</item>
+    <style name="ButtonWhiteStyle" parent="Base.Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_main</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 
+    <style name="TextBlueStyle" parent="TextAppearance.AppCompat">
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="TextPlainBlack" parent="TextAppearance.AppCompat">
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="TextBoldBlack" parent="TextAppearance.AppCompat">
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextTopBarWhite" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="TextBlueBold" parent="TextAppearance.AppCompat">
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textAlignment">textStart</item>
+    </style>
+
+    <style name="TextTopBarRed" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/otpravitelRed</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginStart">4dp</item>
+    </style>
+
+    <style name="TextButtonHint" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColorHint">@color/colorPrimary</item>
+        <item name="android:background">@drawable/rectangle_field</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextBlueReception" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextBlueRecBold" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextBlackReception" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextSearchList" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">@drawable/rectangle_white</item>
     </style>
 
 </resources>
