--- a/app/src/main/res/layout/manager_list_item_layout.xml
+++ b/app/src/main/res/layout/manager_list_item_layout.xml
@@ -38,7 +38,8 @@
                     android:gravity="center"
                     android:text="//data"
                     android:textAlignment="center"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/black"
+                    style="@style/TextBlackList"/>
 
             </LinearLayout>
 
@@ -55,7 +56,8 @@
                     android:text="//code"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    style="@style/TextBlackList"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -91,7 +93,8 @@
                             android:text="//otkuda"
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            style="@style/TextBlackList"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -105,7 +108,8 @@
                             android:layout_height="match_parent"
                             android:text="//otpravitel"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black" />
+                            android:textColor="@android:color/black"
+                            style="@style/TextBlackList"/>
                     </LinearLayout>
 
                 </LinearLayout>
@@ -121,7 +125,7 @@
                         android:id="@+id/iv_strela"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:src="@drawable/ic_gruzovik_blue_24dp" />
+                        app:srcCompat="@drawable/ic_gruzovik_blue_24dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -138,7 +142,8 @@
                         android:text="//kuda"
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        style="@style/TextBlackList"/>
 
                     <TextView
                         android:id="@+id/tv_poluchatel"
@@ -146,7 +151,8 @@
                         android:layout_height="34dp"
                         android:text="//poluchatel"
                         android:textAlignment="center"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@android:color/black"
+                        style="@style/TextBlackList"/>
 
                 </LinearLayout>
 
@@ -166,10 +172,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorAccent"
                 android:text="Д"
-                android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                style="@style/TextTopBarRed"/>
 
             <TextView
                 android:id="@+id/tv_z"
@@ -177,10 +181,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/otpravitelRed"
                 android:text="З"
-                android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                style="@style/TextTopBarRed"/>
 
         </LinearLayout>
 
@@ -210,7 +212,7 @@
                 android:text="//status"
                 android:textAlignment="center"
                 android:textColor="@color/otpravitelRed"
-                android:textSize="16sp" />
+                style="@style/TextBlack16" />
 
             <TextView
                 android:id="@+id/tv_document"
@@ -218,8 +220,7 @@
                 android:layout_height="wrap_content"
                 android:text="//document"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                style="@style/TextBlackReception"/>
 
         </LinearLayout>
 
@@ -236,8 +237,7 @@
                 android:gravity="center"
                 android:text="//partner"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
+                style="@style/TextBlackReception"/>
 
             <TextView
                 android:id="@+id/tv_tovar"
@@ -245,8 +245,7 @@
                 android:layout_height="wrap_content"
                 android:text="//tovar"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                style="@style/TextBlack16"/>
 
         </LinearLayout>
 
