--- a/app/src/main/res/layout/superviser_list_item_layout.xml
+++ b/app/src/main/res/layout/superviser_list_item_layout.xml
@@ -16,39 +16,31 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
+            android:layout_height="26dp"
             android:orientation="horizontal"
             android:weightSum="100">
-
-
-            <ImageView
-                android:id="@+id/iv_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="60"
-                app:srcCompat="@mipmap/ic_launcher"
-                />
 
             <TextView
                 android:id="@+id/tv_data"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Hello"
                 android:layout_weight="40"
+                android:text="Hello"
                 android:textColor="@android:color/black"
-                />
-            
+                style="@style/TextBlackList"/>
+
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_code"
             android:layout_width="match_parent"
-            android:layout_height="28dp"
+            android:layout_height="36dp"
             android:gravity="center"
             android:text="Hello"
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:textAlignment="center"
+            style="@style/TextBlackList"
             />
 
     </LinearLayout>
@@ -79,6 +71,7 @@
                     android:textColor="@android:color/black"
                     android:textAlignment="center"
                     android:textStyle="bold"
+                    style="@style/TextBlackList"
                     />
 
                 <TextView
@@ -88,6 +81,7 @@
                     android:text="Hello"
                     android:textColor="@color/otpravitelRed"
                     android:textAlignment="center"
+                    style="@style/TextBlackList"
                     />
 
             </LinearLayout>
@@ -120,6 +114,7 @@
                     android:textColor="@android:color/black"
                     android:textAlignment="center"
                     android:textStyle="bold"
+                    style="@style/TextBlackList"
                     />
 
                 <TextView
@@ -129,6 +124,7 @@
                     android:text="Hello"
                     android:textColor="@color/colorAccent"
                     android:textAlignment="center"
+                    style="@style/TextBlackList"
                     />
 
             </LinearLayout>
@@ -142,6 +138,7 @@
             android:textColor="@android:color/black"
             android:textAlignment="center"
             android:text="Hello"
+            style="@style/TextBlackList"
             />
 
     </LinearLayout>
