--- a/app/src/main/res/values-xlarge/styles.xml
+++ b/app/src/main/res/values-xlarge/styles.xml
@@ -63,4 +63,91 @@
         <item name="android:textAlignment">textStart</item>
     </style>
 
+    <style name="TextTopBarRed" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/otpravitelRed</item>
+        <item name="android:textSize">48sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginStart">4dp</item>
+    </style>
+
+    <style name="TextButtonHint" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">44sp</item>
+        <item name="android:textColorHint">@color/colorPrimary</item>
+        <item name="android:background">@drawable/rectangle_field</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextBlueReception" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">36sp</item>
+    </style>
+
+    <style name="TextBlueRecBold" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">36sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextBlackReception" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">36sp</item>
+    </style>
+
+    <style name="TextGreyRec" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">40sp</item>
+        <item name="android:textColor">#757575</item>
+        <item name="android:paddingLeft">35dp</item>
+    </style>
+
+    <style name="TextDarkBlueBold" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">36sp</item>
+    </style>
+
+    <style name="ButtonBlueReception">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:background">@drawable/button_main</item>
+    </style>
+
+    <style name="TextSearchList" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:background">@drawable/rectangle_white</item>
+    </style>
+
+    <style name="TextBlackEtiketka" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextBlackEtikBig" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="TextBlackEtik13" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">26sp</item>
+    </style>
+
+    <style name="TextBlackEtikSmall" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextBlackList">
+        <item name="android:textSize">28sp</item>
+    </style>
+
+    <style name="TextBlack16">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
