--- a/app/src/main/res/drawable/vector.xml
+++ b/app/src/main/res/drawable/vector.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <vector
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="251dp"
-        android:height="39dp"
-        android:viewportWidth="251"
-        android:viewportHeight="39"
-        >
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="251dp"
+    android:height="39dp"
+    android:viewportWidth="251"
+    android:viewportHeight="39">
 
         <group>
 
