--- a/app/src/main/res/drawable/rectangle_field.xml
+++ b/app/src/main/res/drawable/rectangle_field.xml
@@ -1,11 +1,8 @@
-<vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="272dp"
     android:height="48dp"
     android:viewportWidth="272"
-    android:viewportHeight="48"
-    >
+    android:viewportHeight="48">
 
     <group>
 
